--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
     "react-icons": "^5.2.1",
+    "react-paginate": "^8.2.0",
     "swiper": "^11.1.3",
     "zod": "^3.23.8"
   },
