--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^2.0.3",
     "@hookform/resolvers": "^3.4.0",
     "axios": "^1.7.0",
+    "dayjs": "^1.11.11",
     "next": "14.1.3",
     "next-auth": "^4.24.7",
     "react": "^18",
@@ -21,6 +22,7 @@
     "react-hook-form": "^7.51.4",
     "react-icons": "^5.2.1",
     "react-paginate": "^8.2.0",
+    "react-player": "^2.16.0",
     "swiper": "^11.1.3",
     "zod": "^3.23.8"
   },
