--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
     "react-icons": "^5.2.1",
+    "react-intersection-observer": "^9.10.3",
     "react-paginate": "^8.2.0",
     "react-player": "^2.16.0",
     "swiper": "^11.1.3",
